# phone-directory

./: README.md  consts.py  main.py  pyproject.toml
db/: core.py  data.db  tables.py
src/: Errors.py  phone_dictionary.py
